--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     
-    <title>React App</title>
+    <title>IMST - The Best College of IT and Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
